test/sema/typeck/generic/type-param-bounds-2.out
error: type `T` does not implement trait `MyTraitB`.
--> type-param-bounds-2.dora:4:27
 | trait MyTraitB {}
 | class Foo[T: MyTraitA + MyTraitB]
 | fn bar[T: MyTraitA](_arg: Foo[T]) {}
                             ~~~~~~
 | 
1 error found.
