test/sema/typeck/generic/type-param-bounds-2.dora
trait MyTraitA {}
trait MyTraitB {}
class Foo[T: MyTraitA + MyTraitB]
fn bar[T: MyTraitA](_arg: Foo[T]) {}
